--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,7 +22,9 @@ body {
 
 .container {
   margin: 30px auto;
-  width: 400px;
+  width: 800px;
+  padding:20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  
 }
 
 h1 {
@@ -90,14 +92,14 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
+  background-color: blue;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
   display: block;
-  font-size: 16px;
+  font-size: 18px;
   margin: 10px 0 30px;
-  padding: 10px;
+  padding: 15px;
   width: 100%;
 }
 
